--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
 </head>
 <body id="resume">
   <noscript>Hi &eacute;sum&eacute; pages.</noscript>
+          <ul>
+	        		<li><a href="/">Home</a></li>
+		        	<li><a href="/about">About</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+	    		</ul>
 </body>
 </html>
